# pwcoco

./: .gitignore  CMakeLists.txt  README.md
data/: atp1a4_test.exp.txt  atp1a4_test.out.txt
pwcoco/: pwcoco.sln
pwcoco/pwcoco/: CMakeLists.txt  coloc.cpp  coloc.h  conditional.cpp  conditional.h  data.cpp  data.h  dcdflib.cpp  dcdflib.h  helper_funcs.cpp  helper_funcs.h  options.cpp  options.h  pwcoco.vcxproj  pwcoco.vcxproj.filters
pwcoco_win/: pwcoco_win.sln
pwcoco_win/pwcoco_win/: pwcoco_win.vcxproj  pwcoco_win.vcxproj.filters
python/: locusplotter.py
src/: coloc.cpp  coloc.h  conditional.cpp  conditional.h  data.cpp  data.h  helper_funcs.cpp  helper_funcs.h  options.cpp  options.h
